--- a/css/main.css
+++ b/css/main.css
@@ -45,25 +45,38 @@ body {
 }
 
 /* ---------------------------------------------------------------------------------MY STYLES------------------------------------------------------------------------------------------ */
+/* 
+#logo {
+    background-color: rgba(255, 255, 255, 0.411);
+    border-radius: 50%;
+
+} */
+
+/* #logo img {} */
 
 #logo a {
+
     font-size: 25px;
-    color: white;
+    /* color: white; */
 }
 
-#logo #logoimg {
+/* #logo #logoimg {
     border-radius: 50%;
-}
+} */
 
 #logo img {
-    border: none;
+    transform: scale(2.1);
+    height: 80px;
+    /* border-radius: 50%; */
     transition: transform 0.3s ease-in-out, border 0.3s ease-in-out;
 }
 
 #logo img:hover {
-    transform: scale(1.1);
-    border: solid 3px #C6B069;
+    transform: scale(1.3);
+    /* border: solid 3px #C6B069; */
 }
+
+
 
 #mc_embed_signup #footer-btn {
     background-color: rgb(198, 176, 105);
@@ -840,6 +853,7 @@ th {
 }
 
 @media (max-width: 767px) {
+
     .typo-sec {
         margin-bottom: 30px
     }
@@ -2105,7 +2119,7 @@ h6 {
 /* ----------NAVBAR BLACK EFFECT ON SCROLL ---------------------------- */
 #header.header-scrolled {
     transition: all 0.3s;
-    background-color: rgba(34, 34, 34, 0.9);
+    background-color: rgba(34, 32, 32, 0.507);
     /* height: 135px;
     min-height: -10px; */
 }
@@ -2143,7 +2157,8 @@ h6 {
     }
 
     #header #logo img {
-        max-height: 40px
+        margin-left: 10px;
+        max-height: 60px
     }
 }
 
@@ -2467,8 +2482,9 @@ body.mobile-nav-active #mobile-nav-toggle {
     bottom: 0
 }
 
+/* BACKGROUND IMAGE */
 .banner-area {
-    background: url(../img/showrooms/optical/op1.jpg) center;
+    background: url(../img/showrooms/optical/op3.jpg) center;
     background-size: cover
 }
 
@@ -2484,7 +2500,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .banner-area .overlay-bg {
-    background-color: rgba(4, 9, 30, 0.7)
+    background-color: rgba(4, 9, 30, 0.521)
 }
 
 .banner-content {
